syntax = "proto3";
package demoonechain.citizen;

option go_package = "demo-onechain/x/citizen/types";

message CitizenIds {
  uint64 id = 1;
  string citizenIds = 2; 
  
}
