syntax = "proto3";
package demoonechain.citizen;

option go_package = "demo-onechain/x/citizen/types";

message CitizenOwner {
  string citizenId = 1; 
  string owner = 2; 
  
}

