syntax = "proto3";
package demoonechain.citizen;

option go_package = "demo-onechain/x/citizen/types";

message Metadata {
  
  string title = 1; 
  string description = 2; 
  string uri = 3; 
  string author = 4; 
  string createTime = 5; 
}
